no background for .ui-widget-content

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -96,6 +96,10 @@ form.formtastic > .submit-buttons > input {
     background-color: inherit ; 
   }
 
+  .ui-widget-content {
+    background: none ;
+  }
+
 }
 
 #middle-panel, #right-panel {
