Set the id on the <li> and not on the <a> for better styling ...
This commit should have been made alongwith the last commit. The two changes
- one in haml and the other in scss - go together

--- a/app/views/yardsticks/_list.html.haml
+++ b/app/views/yardsticks/_list.html.haml
@@ -6,8 +6,8 @@
     %ul
       - yardsticks.each_with_index do |y,j|
         - j_as_hex = j.to_s(16).upcase
-        %li
-          %a{ :id => "tab-ys-#{j_as_hex}", :href => "#ys-#{j}", :marker => "#{y.id}" }= "#{j_as_hex}"
+        %li{ :id => "tab-ys-#{j_as_hex}" }
+          %a{ :href => "#ys-#{j}", :marker => "#{y.id}" }= "#{j_as_hex}"
 
     - yardsticks.each_with_index do |y,j|
       %div{ :id => "ys-#{j}" }
