Made #created-slots purgeable.. Should have been part of the last commit

--- a/app/views/examiners/_blockDbSlots.html.haml
+++ b/app/views/examiners/_blockDbSlots.html.haml
@@ -21,7 +21,7 @@
 
 #block-db-operation-summary.new-entity
   %h4 Created in vault ....
-  %ol#created-slots
+  %ol.purgeable#created-slots
   %h4 Don't forget to ...
   %p
     \... bring the above folders into your local working area. Issue the
