Added ability to edit email and password for admin and teachers ..

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -38,6 +38,7 @@
     = render :partial => 'toolbox/swiss_knife'
     = render :partial => 'toolbox/katana'
     = render :partial => 'toolbox/document_preview'
+    = render :partial => 'toolbox/edit_account'
   
 !!!5
 
