--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -17,6 +17,7 @@
     = render :partial => 'toolbox/document_preview'
     = render :partial => 'toolbox/inline_error'
     = render :partial => 'toolbox/nail_file'
+    = render :partial => 'toolbox/edit_account'
 
     = render :partial => 'yardsticks/list'
 
