--- a/app/views/teachers/_control-panel.html.haml
+++ b/app/views/teachers/_control-panel.html.haml
@@ -4,4 +4,5 @@
   = main_link :for => 'report-cards'
   = main_link :for => 'quizzes', :default => true
   = main_link :for => 'yardsticks', :as => 'marking-scheme' 
+  = main_link :for => :account, :as => 'my account'
   = main_link :for => :logout, :href => "/logout", :dynamic => false
