First pass incorporation of form validation plugin - happy.js ..

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -158,3 +158,11 @@ fieldset.inputs {
   }
 } 
 
+span.unhappyMessage {
+  color: #fd9105 ;
+  font: {
+    weight: normal ;
+    style: italic; 
+    size: 11px ;
+  }
+}
