Renamed 'my account' main-link to 'console' ..
The link will provide access to functionality other than just
editing one's own account information

--- a/app/views/admin/_control-panel.html.haml
+++ b/app/views/admin/_control-panel.html.haml
@@ -10,6 +10,6 @@
   = main_link :for => :yardsticks
   = main_link :for => 'scan-loader'
 
-  = main_link :for => :account, :as => 'my account'
+  = main_link :for => :account, :as => 'console'
   = main_link :for => :logout, :href => "/logout", :dynamic => false
 
