Keep legend text capitalized ...
If it needs to be lower- or upper-cased, then that can be done via CSS

--- a/app/views/sektions/_edit.html.haml
+++ b/app/views/sektions/_edit.html.haml
@@ -11,8 +11,8 @@
 
 #edit-student-klass-mapping.multi-select.selection.full-width.left
   %legend
-    %span.target= "roster"
-    %span.operation= "select sections"
+    %span.target= "Roster"
+    %span.operation= "Select Sections"
   = form_tag teacher_update_roster_path, :method => :put, :remote => true do |f| 
     .submit-buttons
       = submit_tag "Update"
