Renamed MacroTopic to Vertical
So now, there would be verticals with topics in them. Each question
will belong to a topic

Oh yes, topic will be the new name for micro_topic. Next commit ...

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -138,7 +138,7 @@ form.formtastic > .submit-buttons > input {
   padding-left: 20px ;
 }
 
-#macro-selection > legend { 
+#vertical-selection > legend { 
   width: 100% ;
   
   margin: {
