--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -30,8 +30,8 @@
     = render :partial => 'sektions/studentlist'
     = render :partial => 'sektions/edit'
     = render :partial => 'sektions/radio_list'
-    = render :partial => 'macro_topics/list'
-    = render :partial => 'macro_topics/masterlist'
+    = render :partial => 'verticals/list'
+    = render :partial => 'verticals/masterlist'
     = render :partial => 'micro_topics/masterlist'
   
     = render :partial => 'toolbox/swiss_knife'
