--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -3,7 +3,7 @@
   #toolbox.hidden 
     = render :partial => 'quizzes/controls'
 
-    = render :partial => 'macro_topics/masterlist'
+    = render :partial => 'verticals/masterlist'
     = render :partial => 'micro_topics/masterlist'
 
     = render :partial => 'sektions/enrolled'
