--- a/app/views/micro_topics/_masterlist.html.haml
+++ b/app/views/micro_topics/_masterlist.html.haml
@@ -1,9 +1,9 @@
 
 #micro-masterlist.hidden
-  - list = get_list_of :macro_topics
-  - list.each do |macro|
-    %div.hidden{ :marker => "#{macro.id}" }
-      - micros = MicroTopic.where(:macro_topic_id => macro.id).order(:name)
+  - list = get_list_of :verticals
+  - list.each do |vertical|
+    %div.hidden{ :marker => "#{vertical.id}" }
+      - micros = MicroTopic.where(:vertical_id => vertical.id).order(:name)
       - micros.each do |micro|
         = render :partial => 'toolbox/swiss_knife', 
                  :locals => { :marker => "#{micro.id}", :label => "#{micro.name}" }
