--- a/app/views/teachers/_buildquiz.html.haml
+++ b/app/views/teachers/_buildquiz.html.haml
@@ -4,13 +4,13 @@
     %li
       %a{ :href => '#courses-taught' }= "courses"
     %li
-      %a{ :href => '#macro-selection-list' }= "broadly"
+      %a{ :href => '#vertical-selection-list' }= "broadly"
     %li
       %a{ :href => '#micro-selection-list' }= "specific"
     %li
       %a{ :href => '#question-options' }= "pick"
   #courses-taught
-  #macro-selection-list
+  #vertical-selection-list
     = form_tag 'course/applicable_micros', :remote => true, :method => :put do |f| 
       .submit-buttons
         = submit_tag 'next'
