--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -4,7 +4,7 @@
     = render :partial => 'quizzes/controls'
 
     = render :partial => 'verticals/masterlist'
-    = render :partial => 'micro_topics/masterlist'
+    = render :partial => 'topics/masterlist'
 
     = render :partial => 'sektions/enrolled'
 
