--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -7,7 +7,7 @@
     = render :partial => 'yardsticks/edit'
     = render :partial => 'courses/new'
     = render :partial => 'courses/edit'
-    = render :partial => 'micro_topics/new'
+    = render :partial => 'topics/new'
     = render :partial => 'teachers/new'
     = render :partial => 'students/new'
     = render :partial => 'sektions/new'
@@ -17,7 +17,7 @@
     = render :partial => 'boards/controls'
     = render :partial => 'courses/controls'
     = render :partial => 'schools/controls'
-    = render :partial => 'micro_topics/controls'
+    = render :partial => 'topics/controls'
     = render :partial => 'examiners/workbench'
     = render :partial => 'examiners/ungraded'
     = render :partial => 'examiners/blockDbSlots'
@@ -32,7 +32,7 @@
     = render :partial => 'sektions/radio_list'
     = render :partial => 'verticals/list'
     = render :partial => 'verticals/masterlist'
-    = render :partial => 'micro_topics/masterlist'
+    = render :partial => 'topics/masterlist'
   
     = render :partial => 'toolbox/swiss_knife'
     = render :partial => 'toolbox/katana'
