--- a/app/views/topics/_new.html.haml
+++ b/app/views/topics/_new.html.haml
@@ -1,6 +1,6 @@
 
 #new-topic.new-entity.close-on-submit
-  = semantic_form_for :topic, :remote => true, :url => micro_topic_path do |f| 
+  = semantic_form_for :topic, :remote => true, :url => topic_path do |f| 
     = f.inputs do 
       = f.input :name, :label => 'Micro Topic'
       = f.input :category, :label => 'Category', :as => :select, 
