--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -8,6 +8,7 @@
     = render :partial => 'courses/new'
     = render :partial => 'courses/edit'
     = render :partial => 'topics/new'
+    = render :partial => 'verticals/new'
     = render :partial => 'teachers/new'
     = render :partial => 'students/new'
     = render :partial => 'sektions/new'
