--- a/app/views/topics/_new.html.haml
+++ b/app/views/topics/_new.html.haml
@@ -2,9 +2,8 @@
 #new-topic.new-entity.close-on-submit
   = semantic_form_for :topic, :remote => true, :url => topic_path do |f| 
     = f.inputs do 
-      = f.input :name, :label => 'Micro Topic'
-      = f.input :category, :label => 'Category', :as => :select, 
-                           :collection => Vertical.order(:name)
-      = f.input :new_category, :hint => 'Specify new category if none of the above apply'
+      = f.input :name, :label => 'Topic'
+      = f.input :vertical, :label => 'Vertical', :as => :select, 
+                           :collection => Vertical.order(:name), :include_blank => false
     .submit-buttons
       = submit_tag 'add new topic'
