--- a/app/views/courses/_controls.html.haml
+++ b/app/views/courses/_controls.html.haml
@@ -2,8 +2,8 @@
 #course-controls.top-panel-controls
   %ul.no-bullets
     = minor_link :for => 'add-course', :as => "New Course"  
-    = minor_link :for => 'add-vertical', :as => "New Vertical"  
-    = minor_link :for => 'add-topic', :as => "New Topic"  
+    = minor_link :for => 'add-verticals-n-topics', :as => "Quickly",
+                 :with => { :panels => { :middle => '#new-topics', :right => '#new-verticals' } }
   = form_tag courses_list_path, :method => :get, :remote => true, :class => 'right' do |f| 
     = drop_down_menu_for :subjects
     = drop_down_menu_for :boards
