Admin can now bulk-create other Admins & Examiners using his/her console ...
But note, there shouldn't be too many Admins - just 3-4

--- a/app/views/admin/_control-panel.html.haml
+++ b/app/views/admin/_control-panel.html.haml
@@ -10,6 +10,7 @@
   = main_link :for => :yardsticks
   = main_link :for => 'scan-loader'
 
-  = main_link :for => :account, :as => 'console'
+  = main_link :for => :account, :as => 'console', 
+              :with => {:panels => { :middle => '#new-examiners' } }
   = main_link :for => :logout, :href => "/logout", :dynamic => false
 
