--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -220,3 +220,12 @@ span.unhappyMessage {
   } 
   background-color: white ;
 } 
+
+#new-examiners form li {
+  width: 90% ;
+  float: left ;
+
+  > input {
+    float: right ;
+  }
+}
