List of examiners displayed in Admin's console tab
all changes are pretty regular except one.

In examiners/list.json.rabl, we are returning a string for the 'id'.
Ordinarily, this would be a number. the 'id' is always set as the
marker by displayJson. However, this time, we are hacking the rabl
to pass styling information

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -26,6 +26,7 @@
     = render :partial => 'schools/admin-view'
     = render :partial => 'courses/summary'
     = render :partial => 'syllabi/edit'
+    = render :partial => 'examiners/list'
     = render :partial => 'yardsticks/list'
     = render :partial => 'teachers/list'
     = render :partial => 'sektions/studentlist'
