--- a/app/views/admin/_control-panel.html.haml
+++ b/app/views/admin/_control-panel.html.haml
@@ -11,6 +11,6 @@
   = main_link :for => 'scan-loader'
 
   = main_link :for => :account, :as => 'console', 
-              :with => {:panels => { :middle => '#new-examiners' } }
+              :with => {:panels => { :middle => '#new-examiners', :right => '#examiners-list' } }
   = main_link :for => :logout, :href => "/logout", :dynamic => false
 
