Tab name changed

--- a/app/views/examiners/_workbench.html.haml
+++ b/app/views/examiners/_workbench.html.haml
@@ -6,7 +6,7 @@
     %li
       %a{ :href => '#vertical-selection' }= "Verticals"
     %li
-      %a{ :href => '#topic-selection' }= "Micros"
+      %a{ :href => '#topic-selection' }= "Topics"
     %li
       %a{ :href => '#misc-traits' }= "Misc"
   #examiner-untagged
