Added missing partials

--- a/app/views/layouts/examiner.html.haml
+++ b/app/views/layouts/examiner.html.haml
@@ -4,9 +4,12 @@
     = render :partial => 'examiners/workbench'
     = render :partial => 'examiners/ungraded'
     = render :partial => 'examiners/blockDbSlots'
+    = render :partial => 'toolbox/swiss_knife'
     = render :partial => 'toolbox/document_preview'
     = render :partial => 'toolbox/edit_account'
     = render :partial => 'yardsticks/list'
+    = render :partial => 'verticals/masterlist'
+    = render :partial => 'topics/masterlist'
 
 
 !!!5
