--- a/app/views/examiners/_control-panel.html.haml
+++ b/app/views/examiners/_control-panel.html.haml
@@ -1,5 +1,5 @@
 
 %ul.no-bullets
   = main_link :for => :workbench, :default => true
-  = main_link :for => :account, :as => 'console'
+  = main_link :for => :account, :as => 'console', :block_ajax => true
   = main_link :for => :logout, :href => "/logout", :dynamic => false
