Block further processing of a click if the link needs sth. selected first
This has been done so that one sees the same output irrespective of whether
one clicks a radio in the side-panel first and then a link (in the control panel)
or if one clicks the link first and then the radio button

In the latter case, if a selection is required, then the user is prompted
to make that selection first. To this end, a new attribute 'select_sth' has
been added to make_links helper method

--- a/app/views/schools/_controls.html.haml
+++ b/app/views/schools/_controls.html.haml
@@ -4,11 +4,14 @@
     = minor_link :for => 'add-n-edit-school', :as => 'Add & Edit School', 
                  :with => {:panels => {:middle => '#new-school', :right => '#edit-school'} }
     = minor_link :for => 'edit-roster', :as => 'Faculty Roster', 
-                 :with => { :panels => { :middle => '#teachers-list', :right => '#edit-student-klass-mapping'} } 
+                 :with => { :panels => { :middle => '#teachers-list', :right => '#edit-student-klass-mapping'} },
+                 :select_sth => true
     = minor_link :for => 'new-studygroups', :as => 'New Sections',
-                 :with => { :panels => { :middle => '#new-studygroups' } }
+                 :with => { :panels => { :middle => '#new-studygroups' } },
+                 :select_sth => true
     = minor_link :for => 'edit-studygroups', :as => 'Edit Sections', 
-                 :with => {:panels => {:middle => '#studygroups-radiolist', :right => '#student-list'} }
+                 :with => {:panels => {:middle => '#studygroups-radiolist', :right => '#student-list'} },
+                 :select_sth => true
 
   = form_tag schools_list_path, :method => :get, :remote => true, :class => 'right' do |f| 
     = drop_down_menu_for :states
