Minor changes I am too lazy to explain

--- a/app/views/teachers/_queue_status.html.haml
+++ b/app/views/teachers/_queue_status.html.haml
@@ -5,9 +5,9 @@
 
   %h4 In the background ... 
   %p
-    Our servers take your selection of questions and - in case of 
-    test-papers - students and then stitch the document. This takes
-    a couple of minutes per document 
+    Our servers take your selection of questions and students and then stitch 
+    together the final PDF. On an average, it takes about 3-5 minutes to stitch
+    one PDF together
 
   %h4 Can I logout now?
   %p 
