changed basis for sorting yardsticks ..
First, sort by whether or not the yardstick pertains to MCQs and
then by its default allotment

--- a/app/views/yardsticks/_list.html.haml
+++ b/app/views/yardsticks/_list.html.haml
@@ -1,5 +1,5 @@
 
-- yardsticks = Yardstick.order(:default_allotment).order(:mcq)
+- yardsticks = Yardstick.order('mcq DESC').order(:default_allotment)
 - role = current_account.role
 
 #yardsticks-summary.left
