initial commit of ability to let teachers see response scans of students for past quizzes

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -12,6 +12,7 @@
     = render :partial => 'teachers/assignquiz'
     = render :partial => 'teachers/buildquiz'
     = render :partial => 'teachers/queue_status'
+    = render :partial => 'teachers/reportcards'
 
     = render :partial => 'toolbox/document_preview'
     = render :partial => 'toolbox/edit_account'
